# devboy-oracle

./: AGENTS.md  CLAUDE.md  start.sh
.claude/: settings.json  settings.local.json
.codex-reports/: 0040-done.md  GOAL.md
.maw/: maw.config.80.json
docs/: home.html  index.html
docs/arra/: index.html
docs/articles/: 001-birth-of-devboy.html  002-school-ingestion.html  003-maw-team-engine.html  004-pnat-hidden-curriculum.html  005-esp32-power.html  006-discord-config.html  007-maw-js-orchestrator.html  008-maw-plugin-system.html  009-arra-oracle-v3.html  010-thclaws-agent-harness.html  011-fleet-migration.html  012-soul-brews-ecosystem.html  013-maw-ui-arra-office.html  014-maw-plugin-registry.html  015-clubsxai-cross-fleet.html  016-allowbots-inter-oracle.html  017-rtk-benchmark.html  018-orchestrator-patterns.html  019-cite-then-claim.html  020-oracle-voice-architecture.html  021-thai-voice-pipeline.html  022-hermes-agent.html  023-agent-comparison.html  024-sovereign-ai.html  025-rag-retrieval-augmented-generation.html  027-dgx-spark.html  (+58 more)
oracle-build/: oracle-devboy-claude.md  shared-claude.md
scripts/: codex-brief-template.md  codex-pr-body.sh  cross-arra-search.sh  install-sop-qa-hook.sh  oracle-build.sh  restore-codex-config.sh  run-codex-review.sh  test-codex-mcp.sh  test-run-codex-review.sh
ψ/lab/from-iotboy/discord-mcp-cli/: .gitignore  Cargo.toml  README.md
ψ/lab/from-iotboy/discord-mcp-cli/src/: main.rs
ψ/learn/from-mlboy/ml-class/2026-05-09_discord-cli-rust/: Cargo.toml
ψ/learn/from-mlboy/ml-class/2026-05-09_discord-cli-rust/src/: main.rs
(+325 files in other folders)
