[package]
name = "discord-mcp-cli"
version = "0.1.0"
edition = "2021"
description = "Minimal CLI that wraps fetch_messages — same shape as plugin:discord:discord MCP tool"
authors = ["IOTBOY 🔭 (DO fleet)"]

[[bin]]
name = "dmcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
